testing the methods and working on web app layout

--- a/hackntell/views/index.hbs
+++ b/hackntell/views/index.hbs
@@ -1,2 +1,11 @@
-<h1> {{ title }} </h1>
-<p>Ciao {{ title }}</p>
+<form action="/results" method="post">
+  <label for="name"> Name </label>
+    <br>
+    <input name="name" type="text"></input>
+    <br>
+  <label for="date"> Date of Birth </label>
+    <br>
+    <input name="date" type="date"></input>
+    <br>
+  <input id="button" type="submit" value="Go"> </input>
+</form>
