--- a/hackntell/views/layouts/layout.hbs
+++ b/hackntell/views/layouts/layout.hbs
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title> {{title}} </title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylish.css">
   </head>
-  <body>
-    {{{body}}} 
+  <body id="main">
+    {{{body}}}
   </body>
 </html>
