--- a/hackntell/public/stylish.css
+++ b/hackntell/public/stylish.css
@@ -6,10 +6,14 @@ body  {
     left: 50%;  
     transform: translate(-50%, -50%);
 }
+
 h1 {
     margin-top: 0;
-    
     color: #99ffce;
+}
+
+.error {
+    color: red;
 }
 
 .but-div {
