--- a/hackntell/views/index.hbs
+++ b/hackntell/views/index.hbs
@@ -1,4 +1,4 @@
-<form class="form" action="/results" method="post">
+<form class="form" name="form" action="/results" onsubmit="return validateForm()" method="post">
   <label class="lab-inp" for="name"> Name </label>
     <br>
     <input class="inp"name="name" type="text"></input>
