--- a/hackntell/public/stylish.css
+++ b/hackntell/public/stylish.css
@@ -9,7 +9,10 @@ body  {
 
 h1 {
     margin-top: 0;
-    color: #99ffce;
+}
+
+.bday {
+    color: #33ff9c;
 }
 
 .error {
@@ -42,7 +45,8 @@ input.button {
     text-align: center;
     width: 150px;
     padding:5px 15px;
-    background: #99ffce;
+    color: white;
+    background: #33ff9c;
     border:0 none;
     cursor:pointer;
     border-radius: 5px;
